[tool.poetry]
name = "volume_adjuster"
version = "0.1.0"
description = "Adjust volume of sound files"
authors = ["ksk0629 <neko.to.tomodachi.muse@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "src/volume_adjuster"}]
repository = "https://github.com/ksk0629/template_py_package"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]

[tool.poetry.dependencies]
python = "^3.11"
pydub = "^0.25.1"
jupyter = "^1.0.0"
notebook = "^7.0.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
pytest-cov = "^4.1.0"
sphinx = "^7.2.6"
black = "^23.9.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
markers = [
    "volume_adjuster: marks tests for VolumeAdjuster class",
    "type_checker: marks test for TypeChecker class"
]